# cc-pilot

./: .gitignore  CLAUDE.md  README.md  cc-pilot-spec.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: app.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: launcher.rs  lib.rs  main.rs  notifier.rs  parser.rs  process_detector.rs  session.rs  settings.rs  tray.rs  watcher.rs  web_client.rs
src/components/common/: environment-icon.tsx
src/components/session-detail/: session-detail.module.css  session-detail.tsx
src/components/session-list/: session-list.module.css  session-list.tsx
src/components/settings/: settings.module.css  settings.tsx
src/components/status-bar/: status-bar.module.css  status-bar.tsx
src/hooks/: use-session-store.ts  use-settings.ts  use-tauri-events.ts
src/lib/: formatters.ts  types.ts
src/styles/: global.css
