[package]
name = "cc-pilot"
version = "0.1.0"
edition = "2021"

[lib]
name = "cc_pilot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
